Use correct method for local OutputSet reference replacement
Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>